edicion de html y demas

--- a/index.html
+++ b/index.html
@@ -67,16 +67,16 @@
         <section class="tire-search-by-size">
             <h2>Buscar neumático por medidas</h2>
             <div class="search-container">
-                <!--<div class="explanation-image">
+                <div class="explanation-image">
                     <img src="./imagenes/medidas-neumatico.jpg" alt="Cómo saber la medida del neumático" loading="lazy">
-                    <div class="labels">
+                    <!--<div class="labels">
                         <span class="label ancho">205 ANCHURA DEL NEUMÁTICO</span>
                         <span class="label perfil">55 PERFIL DEL NEUMÁTICO</span>
                         <span class="label diametro">16 DIÁMETRO DEL NEUMÁTICO</span>
                     </div>-->
                 </div>
                 <div class="search-form">
-                    <div class="form-group">s
+                    <div class="form-group">
                         <label for="ancho">Ancho</label>
                         <select id="ancho">
                             <option value="todos">Todos</option>
