--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
                     <span><i class="fas fa-pump-medical"></i> PICOS GRATIS</span>
                 </div>
             </div>
-            <div class="hero-image">
+            <!--<div class="hero-image">
                 <img src="./imagenes/banner-promo.jpg" alt="Neumáticos en promoción" loading="eager">
-            </div>
+            </div>-->
         </section>
 
         <section class="tire-search-by-size">
