edicion de html y demas

--- a/search-results.html
+++ b/search-results.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resultados de Búsqueda de Neumáticos</title>
+    <title>SALTO PNEUS</title>
     <!-- Incluye Tailwind CSS para estilos básicos y responsividad -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Enlace a tu archivo de estilos principal para consistencia -->
