edicion de varios archivos

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NEUPAR Cubiertas - Tu Tienda de Neumáticos en Paraguay</title>
+    <title>SALTO PNEUS</title>
     <link rel="stylesheet" href="./css/style.css">
     <!-- Swiper CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
@@ -19,7 +19,7 @@
                 <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
             </div>
             <div class="logo">
-                <a href="index.html"><img src="./imagenes/logo.jpg" alt="Logo NEUPAR Cubiertas"></a>
+                <a href="index.html"><img src="./imagenes/logo.jpg" alt="Logo SALTO PNEUS"></a>
             </div>
             <div class="header-right-nav">
           
@@ -186,7 +186,7 @@
                         </button>
                         <div class="accordion-content">
                             <p>Un montaje correcto de las cubiertas es un aspecto fundamental de cara a garantizar un nivel óptimo de seguridad en la circulación de cualquier tipo de vehículo.</p>
-                            <p>En NEUPAR CUBIERTAS contamos con un equipo de profesionales altamente capacitados que se especializan en el montaje y desmontaje de cubiertas, garantizamos su seguridad y satisfacción con un servicio profesional.</p>
+                            <p>En SALTOS PNEUS contamos con un equipo de profesionales altamente capacitados que se especializan en el montaje y desmontaje de cubiertas, garantizamos su seguridad y satisfacción con un servicio profesional.</p>
                         </div>
                     </div>
 
@@ -204,7 +204,7 @@
                             Balanceo <i class="fas fa-chevron-down"></i>
                         </button>
                         <div class="accordion-content">
-                            <p>El balanceo de los neumáticos es esencial para una conducción suave y segura. Los neumáticos desequilibrados pueden causar vibraciones en el volante o el asiento, lo que no solo es incómodo sino que también puede acelerar el desgaste de los neumáticos, la suspensión y los componentes de dirección. En NEUPAR CUBIERTAS, realizamos el balanceo dinámico de sus neumáticos, distribuyendo el peso de manera uniforme alrededor de la rueda y el conjunto del neumático. Esto no solo mejora el confort de conducción, sino que también contribuye a la longevidad de sus neumáticos y a la seguridad general del vehículo.</p>
+                            <p>El balanceo de los neumáticos es esencial para una conducción suave y segura. Los neumáticos desequilibrados pueden causar vibraciones en el volante o el asiento, lo que no solo es incómodo sino que también puede acelerar el desgaste de los neumáticos, la suspensión y los componentes de dirección. En SALTO PNEUS, realizamos el balanceo dinámico de sus neumáticos, distribuyendo el peso de manera uniforme alrededor de la rueda y el conjunto del neumático. Esto no solo mejora el confort de conducción, sino que también contribuye a la longevidad de sus neumáticos y a la seguridad general del vehículo.</p>
                         </div>
                     </div>
                 </div>
