edicion de archivos

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SALTO PNEUS</title>
+    <title>NEUPAR Cubiertas - Tu Tienda de Neumáticos en Paraguay</title>
     <link rel="stylesheet" href="./css/style.css">
     <!-- Swiper CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
@@ -19,7 +19,7 @@
                 <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
             </div>
             <div class="logo">
-                <a href="index.html"><img src="./imagenes/logo.jpg" alt="Logo SALTO PNEUS"></a>
+                <a href="index.html"><img src="./imagenes/logo.jpg" alt="Logo NEUPAR Cubiertas"></a>
             </div>
             <div class="header-right-nav">
           
@@ -131,6 +131,7 @@
                             <option value="R15">R15</option>
                             <option value="R16">R16</option>
                             <option value="R17">R17</option>
+                            <option value="R18">R17.5</option>
                             <option value="R18">R18</option>
                             <option value="R19">R19</option>
                             <option value="R20">R20</option>
@@ -186,7 +187,7 @@
                         </button>
                         <div class="accordion-content">
                             <p>Un montaje correcto de las cubiertas es un aspecto fundamental de cara a garantizar un nivel óptimo de seguridad en la circulación de cualquier tipo de vehículo.</p>
-                            <p>En SALTOS PNEUS contamos con un equipo de profesionales altamente capacitados que se especializan en el montaje y desmontaje de cubiertas, garantizamos su seguridad y satisfacción con un servicio profesional.</p>
+                            <p>En NEUPAR CUBIERTAS contamos con un equipo de profesionales altamente capacitados que se especializan en el montaje y desmontaje de cubiertas, garantizamos su seguridad y satisfacción con un servicio profesional.</p>
                         </div>
                     </div>
 
@@ -204,7 +205,7 @@
                             Balanceo <i class="fas fa-chevron-down"></i>
                         </button>
                         <div class="accordion-content">
-                            <p>El balanceo de los neumáticos es esencial para una conducción suave y segura. Los neumáticos desequilibrados pueden causar vibraciones en el volante o el asiento, lo que no solo es incómodo sino que también puede acelerar el desgaste de los neumáticos, la suspensión y los componentes de dirección. En SALTO PNEUS, realizamos el balanceo dinámico de sus neumáticos, distribuyendo el peso de manera uniforme alrededor de la rueda y el conjunto del neumático. Esto no solo mejora el confort de conducción, sino que también contribuye a la longevidad de sus neumáticos y a la seguridad general del vehículo.</p>
+                            <p>El balanceo de los neumáticos es esencial para una conducción suave y segura. Los neumáticos desequilibrados pueden causar vibraciones en el volante o el asiento, lo que no solo es incómodo sino que también puede acelerar el desgaste de los neumáticos, la suspensión y los componentes de dirección. En NEUPAR CUBIERTAS, realizamos el balanceo dinámico de sus neumáticos, distribuyendo el peso de manera uniforme alrededor de la rueda y el conjunto del neumático. Esto no solo mejora el confort de conducción, sino que también contribuye a la longevidad de sus neumáticos y a la seguridad general del vehículo.</p>
                         </div>
                     </div>
                 </div>
@@ -250,6 +251,12 @@
                 <button type="submit" class="btn-subscribe">SUSCRIBIRSE</button>
             </form>
         </div>
+    </div>
+
+    <!-- Modal para Ampliación de Imagen -->
+    <div id="imageZoomModal" class="image-zoom-overlay">
+        <span class="close-zoom-btn">&times;</span>
+        <img id="zoomedImage" src="" alt="Imagen Ampliada" class="image-zoom-content">
     </div>
 
     <!-- Swiper JS -->
