--- a/search-results.html
+++ b/search-results.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SALTO PNEUS</title>
+    <title>Resultados de Búsqueda de Neumáticos</title>
     <!-- Incluye Tailwind CSS para estilos básicos y responsividad -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Enlace a tu archivo de estilos principal para consistencia -->
@@ -218,6 +218,12 @@
         <i class="fab fa-whatsapp"></i>
     </a>
     <!-- FIN DEL FOOTER -->
+
+    <!-- Modal para Ampliación de Imagen -->
+    <div id="imageZoomModal" class="image-zoom-overlay">
+        <span class="close-zoom-btn">&times;</span>
+        <img id="zoomedImage" src="" alt="Imagen Ampliada" class="image-zoom-content">
+    </div>
 
     <!-- Script para manejar la lógica de búsqueda y renderizado -->
     <script src="js/search-results-script.js"></script>
