edicion de archivos

--- a/search-results.html
+++ b/search-results.html
@@ -219,12 +219,8 @@
     </a>
     <!-- FIN DEL FOOTER -->
 
-    <!-- Modal para Ampliación de Imagen -->
-    <div id="imageZoomModal" class="image-zoom-overlay">
-        <span class="close-zoom-btn">&times;</span>
-        <img id="zoomedImage" src="" alt="Imagen Ampliada" class="image-zoom-content">
-    </div>
-
+    <!-- Swiper JS -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <!-- Script para manejar la lógica de búsqueda y renderizado -->
     <script src="js/search-results-script.js"></script>
     <!-- Si quieres que el menú móvil funcione en esta página, también necesitarías incluir script.js
