--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
         </nav>
     </header>
 
+    <!-- Nuevo mensaje de envíos a todo el país -->
+    <div class="shipping-message" style="background-color: #f0f0f0; padding: 15px; text-align: center; font-size: 1.1em; font-weight: bold; color: #333;">
+        Hacemos envíos a todo el país
+    </div>
+
     <main>
         <section class="hero-banner">
             <!--<div class="promo-content">
@@ -131,6 +136,7 @@
                             <option value="R15">R15</option>
                             <option value="R16">R16</option>
                             <option value="R17">R17</option>
+                            <option value="R17.5">R17.5</option>
                             <option value="R18">R18</option>
                             <option value="R19">R19</option>
                             <option value="R20">R20</option>
@@ -232,16 +238,12 @@
                 
             </div>
         </div>
-        <div class="footer-disclaimer">
-            <p>Precios y condiciones de pago exclusivos para tienda online. Ventas sujetas a análisis y confirmación de datos. Valores, informaciones y stock con posibilidad de alteración sin previo aviso. Imágenes meramente ilustrativas.</p>
-        </div>
+       
     </footer>
 
     <a href="https://wa.me/595XXXXXXXXX" class="whatsapp-float" target="_blank">
         <i class="fab fa-whatsapp"></i>
     </a>
-
-  
 
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
