--- a/upload-product.html
+++ b/upload-product.html
@@ -157,8 +157,19 @@
                     <input type="text" id="sku" name="sku" placeholder="ej. SKU876543">
                 </div>
                 <div class="form-group">
-                    <label for="categories" class="block text-sm mb-1">Categorías (separadas por coma):</label>
-                    <input type="text" id="categories" name="categories" placeholder="ej. Neumáticos para Autos, Verano">
+                    <label for="categories" class="block text-sm mb-1">Categoría:</label>
+                    <select id="categories" name="categories">
+                        <option value="">Seleccionar Categoría</option>
+                        <option value="Autos">Autos</option>
+                        <option value="Pickup-Suv">Pickup-Suv</option>
+                        <option value="Camiones">Camiones</option>
+                        <option value="Agrícolas">Agrícolas</option>
+                        <option value="Llantas">Llantas</option>
+                        <option value="Motos">Motos</option>
+                        <option value="Industrial">Industrial</option>
+                        <option value="Off-Road">Off-Road</option>
+                        <option value="Competicion">Competición</option>
+                    </select>
                 </div>
             </div>
 
