edicion de script.js

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         </div>
     </footer>
 
-    <a href="https://wa.me/595XXXXXXXXX" class="whatsapp-float" target="_blank">
+    <a href="https://wa.me/595983068998" class="whatsapp-float" target="_blank">
         <i class="fab fa-whatsapp"></i>
     </a>
 
