--- a/search-results.html
+++ b/search-results.html
@@ -234,7 +234,7 @@
     </footer>
     <!-- FIN DEL FOOTER SIMPLIFICADO -->
 
-    <a href="https://wa.me/595XXXXXXXXX" class="whatsapp-float" target="_blank">
+    <a href="https://wa.me/595983068998" class="whatsapp-float" target="_blank">
         <i class="fab fa-whatsapp"></i>
     </a>
     
