--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NEUPAR Cubiertas - Tu Tienda de Neumáticos en Paraguay</title>
+    <title>SALTO PNEUS</title>
     <link rel="stylesheet" href="./css/style.css">
-    <!-- Swiper CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <!-- Iconos de Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -226,8 +224,14 @@
         <i class="fab fa-whatsapp"></i>
     </a>
 
-  
-    <!-- Swiper JS REMOVED -->
+ 
+
+    <!-- Modal para Ampliación de Imagen -->
+    <div id="imageZoomModal" class="image-zoom-overlay">
+        <span class="close-zoom-btn">&times;</span>
+        <img id="zoomedImage" src="" alt="Imagen Ampliada" class="image-zoom-content">
+    </div>
+
     <script src="./js/script.js"></script>
     
 </body>
