--- a/search-results.html
+++ b/search-results.html
@@ -238,7 +238,12 @@
         <i class="fab fa-whatsapp"></i>
     </a>
     
-    <!-- Script para manejar la lógica de búsqueda y renderizado -->
+    <!-- Modal para Ampliación de Imagen -->
+    <div id="imageZoomModal" class="image-zoom-overlay">
+        <span class="close-zoom-btn">&times;</span>
+        <img id="zoomedImage" src="" alt="Imagen Ampliada" class="image-zoom-content">
+    </div>
+
     <script src="js/search-results-script.js"></script>
 </body>
 </html>
