--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SALTO PNEUS</title>
     <link rel="stylesheet" href="./css/style.css">
+    <!-- Swiper CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <!-- Iconos de Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -224,8 +226,7 @@
         <i class="fab fa-whatsapp"></i>
     </a>
 
- 
-
+  
     <!-- Modal para Ampliación de Imagen -->
     <div id="imageZoomModal" class="image-zoom-overlay">
         <span class="close-zoom-btn">&times;</span>
