--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SALTO PNEUS</title>
     <link rel="stylesheet" href="./css/style.css">
+    <!-- Iconos de Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!-- Google Fonts: Inter (asegura que la fuente esté disponible) -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -43,25 +46,40 @@
         </nav>
     </header>
 
+    <!-- Mensaje de envíos a todo el país modificado -->
     <div class="shipping-message" style="background-color: #dc3545; padding: 15px; text-align: center; font-size: 1.1em; font-weight: bold; color: #fff;">
         Envíos a todo el país
     </div>
 
     <main>
         <section class="hero-banner">
-            <div class="benefits">
+            <!--<div class="promo-content">
+                <h1>PROMOCIÓN IMPERDIBLE</h1>
+                <p>PROMOCIÓN VÁLIDA HASTA EL 30 DE JUNIO DE 2025</p>
+                <div class="discount">
+                    <span>25%</span> OFF
+                </div>-->
+                <div class="benefits">
                     <span><i class="fas fa-wrench"></i> MONTAJE GRATIS</span>
                     <span><i class="fas fa-pump-medical"></i> PICOS GRATIS</span>
                 </div>
             </div>
-            </section>
+            <!--<div class="hero-image">
+                <img src="./imagenes/banner-promo.jpg" alt="Neumáticos en promoción" loading="eager">
+            </div>-->
+        </section>
 
         <section class="tire-search-by-size">
             <h2>Buscar neumático por medidas</h2>
             <div class="search-container">
                 <div class="explanation-image">
                     <img src="./imagenes/medidas-neumatico.jpg" alt="Cómo saber la medida del neumático" loading="lazy">
-                    </div>
+                    <!--<div class="labels">
+                        <span class="label ancho">205 ANCHURA DEL NEUMÁTICO</span>
+                        <span class="label perfil">55 PERFIL DEL NEUMÁTICO</span>
+                        <span class="label diametro">16 DIÁMETRO DEL NEUMÁTICO</span>
+                    </div>-->
+                </div>
                 <div class="search-form">
                     <div class="form-group">
                         <label for="ancho">Ancho</label>
@@ -126,7 +144,8 @@
                             <option value="R22">R22</option>
                             <option value="R23">R23</option>
                             <option value="R24">R24</option>
-                            <option value="22.5">22.5</option> <option value="24.5">24.5</option>
+                            <option value="22.5">22.5</option> <!-- Para camiones, etc. -->
+                            <option value="24.5">24.5</option>
                         </select>
                     </div>
                     <button class="btn-search">BUSCAR</button>
@@ -134,6 +153,7 @@
             </div>
         </section>
 
+        <!-- Nueva Sección de Resultados de Búsqueda (para búsqueda por medidas y categorías) -->
         <section id="search-results-section" class="search-results-section featured-products" style="display: none;">
             <h2>Resultados de Búsqueda</h2>
             <div id="search-results-grid" class="products-grid">
@@ -142,19 +162,23 @@
             <p id="no-search-results" style="display: none; color: gray; margin-top: 20px;">No se encontraron neumáticos con las medidas seleccionadas.</p>
         </section>
 
+        <!-- Sección Más Destacados - Ahora como una lista de productos -->
         <section class="featured-products">
             <h2>Más destacados</h2>
             <div id="featuredProductsGrid" class="products-grid">
+                <!-- Los productos destacados se cargarán aquí dinámicamente -->
                 <p class="text-center text-gray-600">Cargando productos destacados...</p>
             </div>
         </section>
 
+        <!-- Sección de Servicios -->
         <section class="services-section">
             <div class="services-content">
                 <div class="service-image">
                     <img src="./imagenes/service-tire-mounting.jpg" alt="Servicio de neumáticos" loading="lazy">
                 </div>
                 <div class="service-details">
+                    <!-- Montaje y desmontaje de cubiertas como un ítem de acordeón -->
                     <div class="accordion-item">
                         <button class="accordion-header">
                             Montaje y desmontaje de cubiertas <i class="fas fa-chevron-down"></i>
@@ -202,6 +226,7 @@
         <i class="fab fa-whatsapp"></i>
     </a>
 
+    <!-- Modal para Ampliación de Imagen -->
     <div id="imageZoomModal" class="image-zoom-overlay">
         <span class="close-zoom-btn">&times;</span>
         <img id="zoomedImage" src="" alt="Imagen Ampliada" class="image-zoom-content">
