edicion de archivos

--- a/search-results.html
+++ b/search-results.html
@@ -171,7 +171,7 @@
         }
     </style>
 </head>
-<body class="p-4">
+<body>
     <header class="main-header">
         <div class="top-bar">
             <div class="social-media">
