cambios en html

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
     <header class="main-header">
         <div class="top-bar">
-            <div class="social-media">
+            <!--<div class="social-media">
                 <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
                 <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-            </div>
+            </div>-->
             <div class="logo">
                 <a href="index.html"><img src="./imagenes/logo.jpg" alt="Logo NEUPAR Cubiertas"></a>
             </div>
@@ -85,6 +85,12 @@
                         <label for="ancho">Ancho</label>
                         <select id="ancho">
                             <option value="todos">Todos</option>
+                             <option value="7.00">7.00</option>
+                            <option value="7.50">7.50</option>
+                            <option value="9.00">9.00</option>
+                            <option value="10.00">10.00</option>
+                            <option value="31.00">31.00</option>
+                            <option value="35.00">35.00</option>
                             <option value="145">145</option>
                             <option value="155">155</option>
                             <option value="165">165</option>
@@ -112,6 +118,9 @@
                         <label for="perfil">Perfil</label>
                         <select id="perfil">
                             <option value="todos">Todos</option>
+                            <option value="25">10.50</option>
+                            <option value="30">11.50</option>
+                            <option value="35">12.50</option>
                             <option value="25">25</option>
                             <option value="30">30</option>
                             <option value="35">35</option>
