--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
     <header class="main-header">
         <div class="top-bar">
-            <!--<div class="social-media">
+            <div class="social-media">
                 <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
                 <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-            </div>-->
+            </div>
             <div class="logo">
-                <a href="index.html"><img src="./imagenes/logo.jpg" alt="Logo NEUPAR Cubiertas"></a>
+                <a href="index.html" ><img src="./imagenes/logo.jpg" alt="Logo  SALTO PNEUS"></a>
             </div>
             <div class="header-right-nav">
           
