--- a/upload-product.html
+++ b/upload-product.html
@@ -29,6 +29,12 @@
             color: #1f2937; /* Texto oscuro */
             background-color: #ffffff; /* Fondo blanco */
             transition: border-color 0.2s ease-in-out;
+            /* Estilo para la flecha del select */
+            appearance: none; /* Elimina el estilo por defecto del sistema */
+            background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%236b7280%22%20d%3D%22M287%2C197.3L159.2%2C69.5c-3.2-3.2-8.4-3.2-11.6%2C0L5.4%2C197.3c-3.2%2C3.2-3.2%2C8.4%2C0%2C11.6l11.6%2C11.6c3.2%2C3.2%2C8.4%2C3.2%2C11.6%2C0l120.4-120.4l120.4%2C120.4c3.2%2C3.2%2C8.4%2C3.2%2C11.6%2C0l11.6-11.6C290.2%2C205.7%2C290.2%2C200.5%2C287%2C197.3z%22%2F%3E%3C%2Fsvg%3E');
+            background-repeat: no-repeat;
+            background-position: right 0.7rem top 50%;
+            background-size: 0.65rem auto;
         }
         .form-group input[type="text"]:focus,
         .form-group textarea:focus,
@@ -53,20 +59,6 @@
         }
         .btn-submit:hover {
             background-color: #16a34a; /* Verde más oscuro al pasar el ratón */
-        }
-        .message-box {
-            padding: 1rem;
-            border-radius: 0.5rem;
-            margin-top: 1rem;
-            font-weight: 500;
-        }
-        .message-box.success {
-            background-color: #d1fae5; /* Verde claro */
-            color: #065f46; /* Verde oscuro */
-        }
-        .message-box.error {
-            background-color: #fee2e2; /* Rojo claro */
-            color: #991b1b; /* Rojo oscuro */
         }
         .btn-secondary {
             background-color: #6b7280; /* Gris */
@@ -146,8 +138,14 @@
                     <input type="text" id="pricelocal" name="pricelocal" placeholder="ej. Gs. 650.000 / cuota 6x 108.333">
                 </div>
                 <div class="form-group">
-                    <label for="stockstatus" class="block text-sm mb-1">Estado de Stock:</label>
-                    <input type="text" id="stockstatus" name="stockstatus" placeholder="ej. En stock, Agotado, Últimas unidades">
+                    <label for="stockstatus" class="block text-sm mb-1">Disponibilidad:</label>
+                    <select id="stockstatus" name="stockstatus">
+                        <option value="">Seleccionar Disponibilidad</option>
+                        <option value="En stock">En stock</option>
+                        <option value="Últimas unidades">Últimas unidades</option>
+                        <option value="Agotado">Agotado</option>
+                        <option value="Por encargo">Por encargo</option>
+                    </select>
                 </div>
             </div>
 
