--- a/upload-product.html
+++ b/upload-product.html
@@ -144,7 +144,7 @@
                         <option value="En stock">En stock</option>
                         <option value="Últimas unidades">Últimas unidades</option>
                         <option value="Agotado">Agotado</option>
-                        <option value="Por encargo">Por encargo</option>
+                        <option value="Por pedido">Por pedido</option>
                     </select>
                 </div>
             </div>
